--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <audio id="music" autoplay>
-        <source src="https://your-server.com/music.mp3" type="audio/mpeg">
+        <source src="https://docs.google.com/uc?export=download&id=1iztjtMU3UfJ-JBO31IUVVI4kWkR8gmSp" type="audio/mpeg">
     </audio>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
