--- a/index.html
+++ b/index.html
@@ -1,32 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Музыка</title>
-    <style>
-        body {
-            background-image: url('https://source.unsplash.com/random/1920x1080');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
-<body>
-    <audio id="music" autoplay>
-        <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
-    </audio>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const audio = document.getElementById('music');
-            audio.play().catch(error => {
-                console.log('Автовоспроизведение заблокировано браузером');
-            });
-        });
-    </script>
-</body>
-</html>
+<audio id="music" autoplay muted>
+    <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const audio = document.getElementById('music');
+        audio.muted = false;
+        audio.volume = 1.0; // Включаем звук
+        audio.play().catch(error => console.log('Автовоспроизведение заблокировано'));
+    });
+</script>
