--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         #image {
             width: 300px; /* Размер картинки */
             height: auto;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -26,13 +25,15 @@
         <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
     </audio>
 
-    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Нажмите, чтобы включить музыку">
+    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Изображение">
 
     <script>
-        document.body.addEventListener('click', function () {
+        document.addEventListener('DOMContentLoaded', function () {
             const audio = document.getElementById('music');
-            audio.play();
-        }, { once: true }); // Музыка включится при первом клике
+            audio.play().catch(error => {
+                console.log('Автовоспроизведение заблокировано браузером');
+            });
+        });
     </script>
 </body>
 </html>
