--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
     <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Изображение">
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+        setTimeout(() => {
             const audio = document.getElementById('music');
+            audio.volume = 1.0; // Устанавливаем громкость на максимум
             audio.play().catch(error => {
                 console.log('Автовоспроизведение заблокировано браузером');
             });
-        });
+        }, 1000); // Задержка 1 секунда перед запуском
     </script>
 </body>
 </html>
