--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         #image {
             width: 300px; /* Размер картинки */
             height: auto;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -25,16 +26,14 @@
         <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
     </audio>
 
-    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Изображение">
+    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Нажмите, чтобы включить музыку">
 
     <script>
-        setTimeout(() => {
+        document.body.addEventListener('click', function () {
             const audio = document.getElementById('music');
             audio.volume = 1.0; // Устанавливаем громкость на максимум
-            audio.play().catch(error => {
-                console.log('Автовоспроизведение заблокировано браузером');
-            });
-        }, 1000); // Задержка 1 секунда перед запуском
+            audio.play();
+        }, { once: true }); // Музыка включится только при первом клике
     </script>
 </body>
 </html>
