--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
             background-position: center;
             height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
+            text-align: center;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        #text {
+            font-size: 28px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 5px black;
         }
         #image {
             width: 300px; /* Размер картинки */
@@ -21,19 +31,4 @@
         }
     </style>
 </head>
-<body>
-    <audio id="music" loop>
-        <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
-    </audio>
-
-    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Нажмите, чтобы включить музыку">
-
-    <script>
-        document.body.addEventListener('click', function () {
-            const audio = document.getElementById('music');
-            audio.volume = 1.0; // Устанавливаем громкость на максимум
-            audio.play();
-        }, { once: true }); // Музыка включится только при первом клике
-    </script>
-</body>
-</html>
+<bo
