--- a/index.html
+++ b/index.html
@@ -31,4 +31,20 @@
         }
     </style>
 </head>
-<bo
+<body>
+    <audio id="music" loop>
+        <source src="https://res.cloudinary.com/dvbwzty4q/video/upload/v1740159033/POU_ESTOURADO_xwtqwl.mp3" type="audio/mpeg">
+    </audio>
+
+    <div id="text">Нажми на сосок!!!!</div>
+    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Нажми, чтобы включить музыку">
+
+    <script>
+        document.body.addEventListener('click', function () {
+            const audio = document.getElementById('music');
+            audio.volume = 1.0; // Устанавливаем громкость на максимум
+            audio.play();
+        }, { once: true }); // Музыка включится только при первом клике
+    </script>
+</body>
+</html>
