--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </audio>
 
     <div id="text">Нажми на сосок!!!!</div>
-    <img id="image" src="https://i.imgur.com/rNWZFCd.jpeg" alt="Нажми, чтобы включить музыку">
+    <img id="image" src="https://i.ibb.co/pvk9gDrY/IMG-1214.jpg" alt="Нажми, чтобы включить музыку">
 
     <script>
         document.body.addEventListener('click', function () {
